--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.5.10</title>
+    <title>FIKO 0.5.11</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -21,7 +21,7 @@
       //<![CDATA[
       document.write(
         "<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.27.7'><\/script>".replace(
-          "HOST",
+          'HOST',
           location.hostname
         )
       );
@@ -50,8 +50,7 @@
           type="checkbox"
           id="toggle-theme"
           class="toggle-container"
-          onchange="toggleTheme()"
-        />
+          onchange="toggleTheme()" />
         <label for="toggle-theme"><i>Swith color mode</i></label>
       </div>
     </header>
@@ -61,7 +60,9 @@
         <hgroup class="container">
           <h2>Headings</h2>
           <small>Looks like this:</small>
+          <hr />
         </hgroup>
+        <br />
 
         <hgroup>
           <h1>h1 FIKO CSS</h1>
@@ -79,7 +80,9 @@
         <hgroup class="container">
           <h2>Horizontal rule</h2>
           <small>hr has some small vertical spacing!</small>
+          <hr />
         </hgroup>
+        <br />
 
         <hr />
         <hr />
@@ -90,19 +93,20 @@
 
       <section>
         <hgroup class="container">
-          <h2>Full-bleed layouts</h2>
+          <h2 class="container">Full-bleed layouts</h2>
           <small
             >Without the `.container` class, elements have no horizontal
             spacing, as the following image:</small
           >
+          <hr />
         </hgroup>
+        <br />
       </section>
 
       <!-- Full-bleed -->
       <img
         src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
-        alt="rokma.com"
-      />
+        alt="rokma.com" />
 
       <hr />
 
@@ -113,7 +117,9 @@
           <hgroup class="container">
             <h2>Accordion</h2>
             <small>Opunanclose as woman legs.</small>
+            <hr />
           </hgroup>
+          <br />
 
           <!-- Accordion -->
           <details>
@@ -129,7 +135,10 @@
           <!-- Accordion -->
           <details open>
             <summary>Open Accordion Title</summary>
-            <p>Accordion can be open by default. Use `details open`</p>
+            <p>
+              Accordion can be open by default. Use `details open`. It can still
+              be closed! Check it out.
+            </p>
           </details>
         </section>
 
@@ -139,100 +148,16 @@
           <hgroup class="container">
             <h2>Paragraph</h2>
             <small>Has some bottom padding:</small>
+            <hr />
           </hgroup>
+          <br />
+
           <p>
             This is a paragraph full of lorem ipsum dolor sit, amet consectetur
             adipisicing elit.
           </p>
           <p>New paragraph. Amet consectetur adipisicing elit.</p>
         </section>
-
-        <hr />
-
-        <section>
-          <hgroup class="container">
-            <h2>Blockquote</h2>
-            <small>Renders as this:</small>
-          </hgroup>
-          <blockquote class="container" cite="https://fiko.rokma.rocks">
-            This is a blockquote. Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit.
-          </blockquote>
-
-          <small class="container">One more:</small>
-
-          <blockquote
-            class="container"
-            cite="http://www.worldwildlife.org/who/index.html"
-          >
-            For 50 years, WWF has been protecting the future of nature. The
-            world's leading conservation organization, WWF works in 100
-            countries and is supported by 1.2 million members in the United
-            States and close to 5 million globally.
-          </blockquote>
-        </section>
-
-        <hr />
-
-        <!-- Article | Card -->
-
-        <hgroup class="container">
-          <h2>Article</h2>
-          <small>Renders as a card</small>
-        </hgroup>
-
-        <article class="border">
-          <h2 class="">Article Card</h2>
-          <img
-            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
-            alt="rokma.com"
-          />
-          <p class="container">
-            This article has a <code>.border</code> class.
-          </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
-        </article>
-
-        <article class="border">
-          <h2 class="container">Article <small>Title</small></h2>
-          <img
-            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
-            alt="rokma.com"
-          />
-          <p class="container">
-            Article content goes here. Lorem ipsum dolor sit amet.
-          </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
-        </article>
-
-        <article>
-          <h2 class="container">No border article</h2>
-          <img
-            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
-            alt="rokma.com"
-          />
-          <p class="container">
-            Article content goes here. Lorem ipsum dolor sit amet.
-          </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
-        </article>
-
-        <article>
-          <h2 class="container">Text article</h2>
-          <p class="container">
-            Article content goes here. Ipsum dolor sit amet. Lorem dolor sit
-            amet. Lorem ipsum sit amet. Lorem ipsum dolor amet.
-          </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
-        </article>
 
         <hr />
 
@@ -246,7 +171,9 @@
             <small
               >The class="border" is added here to show grid elements:</small
             >
+            <hr />
           </hgroup>
+          <br />
 
           <div class="grid">
             <div>
@@ -286,9 +213,9 @@
             <h2>Figure<code></code></h2>
             <small>Use it when in need for Horizontal Scroll.</small>
             <small>It can contain anything, here it wraps a table:</small>
-            <br />
-            <br />
+            <hr />
           </hgroup>
+          <br />
 
           <!-- Figure  -->
           <figure>
@@ -360,37 +287,130 @@
           <figure>
             <img
               src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
-              alt="rokma.com"
-            />
-            <figcaption>fiko.rokma.rocks</figcaption>
+              alt="rokma.com" />
           </figure>
+          <figcaption>figure caption</figcaption>
         </section>
 
         <hr />
 
-        <section class="container">
-          <p>
-            <br /><br /><br />
-            <small><em>Space intentionally left blank</em></small>
-            <br /><br /><br /><br /><br /><br />
-          </p>
+        <section>
+          <hgroup class="container">
+            <h2>Blockquote</h2>
+            <small>Renders as this:</small>
+          </hgroup>
+          <blockquote class="container" cite="https://fiko.rokma.rocks">
+            This is a blockquote. Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit.
+          </blockquote>
+
+          <small class="container">One more:</small>
+
+          <blockquote
+            class="container"
+            cite="http://www.worldwildlife.org/who/index.html">
+            For 50 years, WWF has been protecting the future of nature. The
+            world's leading conservation organization, WWF works in 100
+            countries and is supported by 1.2 million members in the United
+            States and close to 5 million globally.
+          </blockquote>
         </section>
+
+        <hr />
+
+        <!-- Article | Card -->
+
+        <hgroup class="container">
+          <h2>Article</h2>
+          <small
+            >Renders as a card, dafaults to no border. Use it to center child/s
+            horizontally. Here i</small
+          >
+        </hgroup>
+
+        <article class="border">
+          <h2 class="">Article Card</h2>
+          <img
+            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+            alt="rokma.com" />
+          <p class="container">
+            This article has a <code>.border</code> class.
+          </p>
+          <a href="#" class="card-button">
+            <button>Call to Action</button>
+          </a>
+        </article>
+
+        <article class="border">
+          <h2 class="container">Article <small>Title</small></h2>
+          <img
+            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+            alt="rokma.com" />
+          <p class="container">
+            Article content goes here. Lorem ipsum dolor sit amet.
+          </p>
+          <a href="#" class="card-button">
+            <button>Call to Action</button>
+          </a>
+        </article>
+
+        <article>
+          <h2 class="container">No border article</h2>
+          <img
+            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+            alt="rokma.com" />
+          <p class="container">
+            Article content goes here. Lorem ipsum dolor sit amet.
+          </p>
+          <a href="#" class="card-button">
+            <button>Call to Action</button>
+          </a>
+        </article>
+
+        <article>
+          <h2 class="container">Text article</h2>
+          <p class="container">
+            Article content goes here. Ipsum dolor sit amet. Lorem dolor sit
+            amet. Lorem ipsum sit amet. Lorem ipsum dolor amet.
+          </p>
+          <a href="#" class="card-button">
+            <button>Call to Action</button>
+          </a>
+        </article>
       </div>
+
+      <hr />
+
+      <section class="container">
+        <article>
+          <p>
+            <small><em>Space intentionally left blank</em></small>
+          </p>
+        </article>
+      </section>
+
+      <hr />
+      <article>
+        <small>FULL WIDTH, CENTERED</small>
+        <h5>PRETTY COOL HUH?!</h5>
+        <span>Get it by using the 'article' container</span>
+      </article>
+      <hr />
     </main>
 
     <!-- Footer -->
     <footer class="invert">
-      <p class="container">&copy;2023 FIKO.CSS</p>
+      <article><p class="container">&copy;2023 FIKO.CSS</p></article>
     </footer>
 
     <!-- Vanilla JS for Toggle & User Preference Detection -->
     <script>
       function toggleTheme() {
-        const currentTheme = document.body.getAttribute("data-theme");
-        if (currentTheme === "dark") {
-          document.body.setAttribute("data-theme", "light");
+        const currentTheme = document.body.getAttribute('data-theme');
+        if (currentTheme === 'dark') {
+          document.body.setAttribute('data-theme', 'light');
         } else {
-          document.body.setAttribute("data-theme", "dark");
+          document.body.setAttribute('data-theme', 'dark');
         }
       }
 
@@ -398,11 +418,11 @@
       function setUserPreference() {
         const userPrefersDark =
           window.matchMedia &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches;
+          window.matchMedia('(prefers-color-scheme: dark)').matches;
         if (userPrefersDark) {
-          document.body.setAttribute("data-theme", "dark");
+          document.body.setAttribute('data-theme', 'dark');
         } else {
-          document.body.setAttribute("data-theme", "light");
+          document.body.setAttribute('data-theme', 'light');
         }
       }
 
@@ -410,7 +430,7 @@
 
       // Update on preference change (like when using DevTools to change it)
       window
-        .matchMedia("(prefers-color-scheme: dark)")
+        .matchMedia('(prefers-color-scheme: dark)')
         .addListener(setUserPreference);
     </script>
   </body>
