--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.5.11</title>
+    <title>FIKO 0.5.12</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -28,11 +28,11 @@
       //]]>
     </script>
   </head>
-  <body class="toggle-wrapper">
+  <body>
     <!-- JS Toggle Button for Dark/Light Mode -->
 
     <!-- Header -->
-    <header class="invert">
+    <header class="invert toggle-wrapper">
       <nav>
         <ul>
           <li>
@@ -56,48 +56,11 @@
     </header>
 
     <main>
-      <section class="container">
-        <hgroup class="container">
-          <h2>Headings</h2>
-          <small>Looks like this:</small>
-          <hr />
-        </hgroup>
-        <br />
-
+      <section class="pad">
         <hgroup>
-          <h1>h1 FIKO CSS</h1>
-          <h2>h2 FIKO CSS</h2>
-          <h3>h3 FIKO CSS</h3>
-          <h4>h4 FIKO CSS</h4>
-          <h5>h4 FIKO CSS Framework</h5>
-          <h6>h6 FIKO CSS Framework</h6>
-        </hgroup>
-      </section>
-
-      <hr />
-
-      <section class="container">
-        <hgroup class="container">
-          <h2>Horizontal rule</h2>
-          <small>hr has some small vertical spacing!</small>
-          <hr />
-        </hgroup>
-        <br />
-
-        <hr />
-        <hr />
-        <hr />
-      </section>
-
-      <hr />
-
-      <section>
-        <hgroup class="container">
-          <h2 class="container">Full-bleed layouts</h2>
-          <small
-            >Without the `.container` class, elements have no horizontal
-            spacing, as the following image:</small
-          >
+          <h2>Full-bleed layouts</h2>
+          <p>Without the `.container` class, elements have no horizontal
+            spacing, as the following image:</p>
           <hr />
         </hgroup>
         <br />
@@ -110,13 +73,13 @@
 
       <hr />
 
-      <div class="container" role="document">
+      <div class="pad" >
         <!-- Section -->
 
         <section>
-          <hgroup class="container">
+          <hgroup>
             <h2>Accordion</h2>
-            <small>Opunanclose as woman legs.</small>
+            <p>Opunanclose as woman legs.</p>
             <hr />
           </hgroup>
           <br />
@@ -145,16 +108,17 @@
         <hr />
 
         <section>
-          <hgroup class="container">
+          <hgroup>
             <h2>Paragraph</h2>
-            <small>Has some bottom padding:</small>
+            <p>Has some bottom padding:</p></p>
             <hr />
           </hgroup>
           <br />
 
           <p>
-            This is a paragraph full of lorem ipsum dolor sit, amet consectetur
-            adipisicing elit.
+            This is a paragraph, which is max 60 digits wide, to help
+            readability. It ends with a rent full of lorem ipsum dolor sit, amet
+            consectetur adipisicing elit, right?!
           </p>
           <p>New paragraph. Amet consectetur adipisicing elit.</p>
         </section>
@@ -162,45 +126,69 @@
         <hr />
 
         <section>
-          <hgroup class="container">
+          <hgroup>
             <h2>Grid</h2>
-            <small
-              >The class='grid' gives a minimal grid system with auto-layout
-              columns.</small
-            >
-            <small
-              >The class="border" is added here to show grid elements:</small
-            >
+            <p>The class='grid' gives a minimal grid system with auto-layout
+              columns. The class="border" is added here to show grid elements:</p>
             <hr />
           </hgroup>
           <br />
 
           <div class="grid">
-            <div>
-              <article class="border">
-                <header>header 1</header>
-                body 1
-                <footer>footer 1</footer>
+            <div class="border">
+              <article>
+                <header>Article Card Header</header>
+                <img
+                  src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+                  alt="rokma.com" />
+                <footer>This article has a <code>.border</code> class.</footer>
               </article>
             </div>
-            <div>
-              <article class="border">
-                <header>header 2</header>
-                body 2
-                <footer>footer 2</footer>
+            <div class="border">
+              <article>
+                <header>Header</header>
+                <img
+                  src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+                  alt="rokma.com" />
+                <p>This article has a <code>.border</code> class.</p>
+                <a href="#" class="card-button">
+                  <button>Dont click this</button>
+                </a>
               </article>
             </div>
-            <div>
-              <article class="border">
-                <header>header 3</header>
-                body 3
-                <footer>footer 3</footer>
+            <div class="border">
+              <article>
+                <header>Heder</header>
+                <img
+                  src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+                  alt="image alt" />
+                <p>Paragraph</p>
+                <a href="#" class="card-button">
+                  <button>Button</button>
+                </a>
               </article>
             </div>
-            <div>
-              <article class="border">
-                <header>header 4</header>
-                body 4
+            <div class="border">
+              <article>
+                <header>Article Card</header>
+
+                <p>This article has a <code>.border</code> class.</p>
+                <a href="#" class="card-button">
+                  <button>Call to Action</button>
+                </a>
+              </article>
+            </div>
+            <div class="border">
+              <article>
+                <header>header</header>
+                body
+                <footer>footer</footer>
+              </article>
+            </div>
+            <div class="border">
+              <article>
+                <header>header</header>
+                body, no footer
               </article>
             </div>
           </div>
@@ -209,10 +197,10 @@
         <hr />
 
         <section>
-          <hgroup class="container">
+          <hgroup>
             <h2>Figure<code></code></h2>
-            <small>Use it when in need for Horizontal Scroll.</small>
-            <small>It can contain anything, here it wraps a table:</small>
+            <p>Use it when in need for Horizontal Scroll.</p>
+            <p>It can contain anything, here it wraps a table:</p>
             <hr />
           </hgroup>
           <br />
@@ -283,7 +271,7 @@
             </table>
           </figure>
 
-          <small>Here it wraps a image:</small>
+          <p>Here it wraps a image:</p>
           <figure>
             <img
               src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
@@ -295,16 +283,16 @@
         <hr />
 
         <section>
-          <hgroup class="container">
+          <hgroup>
             <h2>Blockquote</h2>
-            <small>Renders as this:</small>
+            <p>Renders as this:</p>
           </hgroup>
           <blockquote class="container" cite="https://fiko.rokma.rocks">
             This is a blockquote. Lorem ipsum dolor sit, amet consectetur
             adipisicing elit.
           </blockquote>
 
-          <small class="container">One more:</small>
+          <p>One more:</p>
 
           <blockquote
             class="container"
@@ -320,12 +308,10 @@
 
         <!-- Article | Card -->
 
-        <hgroup class="container">
+        <hgroup>
           <h2>Article</h2>
-          <small
-            >Renders as a card, dafaults to no border. Use it to center child/s
-            horizontally. Here i</small
-          >
+          <p>Renders as a card, dafaults to no border. Use it to center children
+            horizontally here it wraps an image.</p>
         </hgroup>
 
         <article class="border">
@@ -333,43 +319,37 @@
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com" />
-          <p class="container">
-            This article has a <code>.border</code> class.
-          </p>
+          <p>This article has a <code>.border</code> class.</p>
           <a href="#" class="card-button">
             <button>Call to Action</button>
           </a>
         </article>
 
         <article class="border">
-          <h2 class="container">Article <small>Title</small></h2>
+          <h2>Article</h2>
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com" />
-          <p class="container">
-            Article content goes here. Lorem ipsum dolor sit amet.
-          </p>
+          <p>Article content goes here. Lorem ipsum dolor sit amet.</p>
           <a href="#" class="card-button">
             <button>Call to Action</button>
           </a>
         </article>
 
         <article>
-          <h2 class="container">No border article</h2>
+          <h2>No border article</h2>
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com" />
-          <p class="container">
-            Article content goes here. Lorem ipsum dolor sit amet.
-          </p>
+          <p>Article content goes here. Lorem ipsum dolor sit amet.</p>
           <a href="#" class="card-button">
             <button>Call to Action</button>
           </a>
         </article>
 
         <article>
-          <h2 class="container">Text article</h2>
-          <p class="container">
+          <h2>Text article</h2>
+          <p>
             Article content goes here. Ipsum dolor sit amet. Lorem dolor sit
             amet. Lorem ipsum sit amet. Lorem ipsum dolor amet.
           </p>
@@ -377,30 +357,63 @@
             <button>Call to Action</button>
           </a>
         </article>
-      </div>
 
-      <hr />
+        <hr />
 
-      <section class="container">
+        <section>
+          <hgroup>
+            <h2>Headings</h2>
+            <p>Looks like this:</p>
+            <hr />
+          </hgroup>
+          <br />
+
+          <hgroup class="container">
+            <h1>h1 FIKO CSS</h1>
+            <h2>h2 FIKO CSS</h2>
+            <h3>h3 FIKO CSS</h3>
+            <h4>h4 FIKO CSS</h4>
+            <h5>h4 FIKO CSS Framework</h5>
+            <h6>h6 FIKO CSS Framework</h6>
+          </hgroup>
+        </section>
+
+        <hr />
+
+        <section>
+          <hgroup>
+            <h2>Horizontal rule</h2>
+            <p>hr has some small vertical spacing!</p>
+            <hr />
+          </hgroup>
+          <br />
+
+          <hr />
+          <hr />
+          <hr />
+        </section>
+
+        <section>
+          <article>
+            <p>
+              <p><em>Space intentionally left blank</em></p>
+            </p>
+          </article>
+        </section>
+
+        <hr />
         <article>
-          <p>
-            <small><em>Space intentionally left blank</em></small>
-          </p>
+          <p>FULL WIDTH, CENTERED</p>
+          <h5>PRETTY COOL HUH?!</h5>
+          <span>Get it by using the 'article' container</span>
         </article>
-      </section>
-
-      <hr />
-      <article>
-        <small>FULL WIDTH, CENTERED</small>
-        <h5>PRETTY COOL HUH?!</h5>
-        <span>Get it by using the 'article' container</span>
-      </article>
-      <hr />
+        <hr />
+      </div>
     </main>
 
     <!-- Footer -->
     <footer class="invert">
-      <article><p class="container">&copy;2023 FIKO.CSS</p></article>
+      <article><p>&copy;2023 FIKO.CSS</p></article>
     </footer>
 
     <!-- Vanilla JS for Toggle & User Preference Detection -->
