fix dev script | v0.5.14

--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.5.13</title>
+    <title>FIKO 0.5.14</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -77,19 +77,25 @@
         <section>
           <hgroup>
             <h2>Accordion</h2>
-            <p>Opunanclose as woman legs.</p>
           </hgroup>
           <br />
 
           <!-- Accordion -->
           <details>
             <summary>Closed Accordion Title</summary>
-            <p>Accordion content goes here.</p>
+            <p>
+              This is the accordion content goes here. Opunanclose as woman
+              legs.
+            </p>
           </details>
 
           <details>
             <summary>Other Closed Accordion</summary>
             <p>Accordion content goes here.</p>
+            <p>Opunanclose as woman legs.</p>
+            <p>Opunanclose as woman legs.</p>
+            <p>Opunanclose as woman legs.</p>
+            <p>Opunanclose as woman legs.</p>
           </details>
 
           <!-- Accordion -->
@@ -106,7 +112,6 @@
           <hgroup>
             <h2>Paragraph</h2>
           </hgroup>
-          <br />
 
           <p>
             This is a paragraph, which is max 60 digits wide, to help
@@ -192,7 +197,7 @@
 
         <section>
           <hgroup>
-            <h2>Figure<code></code></h2>
+            <h2>Figure</h2>
             <p>Use it when in need for Horizontal Scroll.</p>
             <p>It can contain anything, here it wraps a table:</p>
           </hgroup>
